# in-a-box

./: .gitignore  LICENSE  README.md  screwdriver.yaml  setup.py
.github/workflows/: ci-cd.yml
package/: setup.cfg  setup.cfg~  setup.py  tox.ini  tox.ini~
package/screwdriver_cd_setup/: __init__.py
package/tests/: test__module.py
