[metadata]
author = Screwdriver.cd team
description-file = ../README.md
name = screwdriver_in_a_box
url = https://git.ouroath.com/dhubbard/in-a-box
version = 0.0.0

[options]
packages =
    screwdriver_in_a_box
python_requires = >=2.7

[options.extras_require]
test =
    vcrpy-unittest

[options.entry_points]
console_scripts =
    screwdriver_in_a_box=screwdriver_in_a_box:main
